--- a/app/src/main/res/layout/list_item_video.xml
+++ b/app/src/main/res/layout/list_item_video.xml
@@ -3,27 +3,65 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_marginBottom="25dp"
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/video_thumbnail"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:scaleType="centerCrop"
+        android:background="@drawable/ic_launcher_background"
         app:layout_constraintDimensionRatio="16:9"
         app:layout_constraintEnd_toEndOf="parent"
-        android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:background="@tools:sample/backgrounds/scenic" />
 
     <ImageView
         android:id="@+id/video_author"
-        tools:background="@tools:sample/avatars"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/video_thumbnail"
         android:layout_width="36dp"
-        android:layout_height="36dp"/>
+        android:layout_height="36dp"
+        android:layout_marginStart="10dp"
+        android:src="@drawable/ic_launcher_background"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/video_thumbnail"
+        tools:background="@tools:sample/avatars" />
+
+    <TextView
+        android:id="@+id/video_title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:maxLines="2"
+        android:text="@string/app_name"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@id/video_actions"
+        app:layout_constraintStart_toEndOf="@id/video_author"
+        app:layout_constraintTop_toTopOf="@id/video_author"
+        tools:text="Shawn Mendes - The day I'm got you" />
+
+    <TextView
+        android:id="@+id/video_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:text="@string/app_name"
+        android:layout_marginTop="3dp"
+        android:textSize="12sp"
+        app:layout_constraintStart_toEndOf="@id/video_author"
+        app:layout_constraintTop_toBottomOf="@id/video_title"
+        tools:text="ShawnMendesVEVO - 7 views - 25 years ago" />
+
+    <ImageView
+        android:id="@+id/video_actions"
+        android:layout_width="18dp"
+        android:layout_height="10dp"
+        android:layout_marginEnd="4dp"
+        android:background="@drawable/ic_baseline_more_vert_24"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/video_title" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
